 @startuml

title __FRAGMENT's Class Diagram__\n

  namespace com.fyp {
    namespace lecturer {
      namespace fragment {
        class com.fyp.lecturer.fragment.LecturerAttendRecord {
            {static} - ARG_PARAM1 : String
            {static} - ARG_PARAM2 : String
            - mParam1 : String
            - mParam2 : String
            + LecturerAttendRecord()
            {static} + newInstance()
            + onCreate()
            + onCreateView()
        }
      }
    }
  }
  

  namespace com.fyp {
    namespace lecturer {
      namespace fragment {
        class com.fyp.lecturer.fragment.LecturerHomeFragment {
            {static} - ARG_PARAM1 : String
            {static} - ARG_PARAM2 : String
            - mParam1 : String
            - mParam2 : String
            + LecturerHomeFragment()
            {static} + newInstance()
            + onCreate()
            + onCreateView()
            - setCalendarView()
        }
      }
    }
  }
  

  namespace com.fyp {
    namespace lecturer {
      namespace fragment {
        class com.fyp.lecturer.fragment.lecturerViewPagerAdapter {
            + getCount()
            + getItem()
            + lecturerViewPagerAdapter()
        }
      }
    }
  }
  

  com.fyp.lecturer.fragment.LecturerAttendRecord -up-|> androidx.fragment.app.Fragment
  com.fyp.lecturer.fragment.LecturerHomeFragment -up-|> androidx.fragment.app.Fragment
  com.fyp.lecturer.fragment.lecturerViewPagerAdapter -up-|> androidx.fragment.app.FragmentPagerAdapter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
